--- a/project.json
+++ b/project.json
@@ -5,6 +5,7 @@
   "main": "Main.xaml",
   "dependencies": {
     "TextSplit._250218": "[1.0.1]",
+    "TextSplit._250218_2": "[1.0.5]",
     "TextSplit._250218_다시": "[1.0.2]",
     "UiPath.Credentials.Activities": "[2.1.0]",
     "UiPath.Excel.Activities": "[2.24.4]",
